# xtream

./: .clang-format  .gitignore  AGENTS.md  CMakeLists.txt  CMakePresets.json  PLAN.md  README.md  notes.md  window_survey.md
.agents/skills/dev-phase/: SKILL.md
interfaces/functions/: filter_function.h  map_function.h  sink_function.h  source_function.h
interfaces/operators/logical/: filter_logical_operator.h  logical_operator.h  map_logical_operator.h  sink_logical_operator.h  source_logical_operator.h
interfaces/operators/physical/: chain_context.h  operator_context.h  physical_operator.h
src/: CMakeLists.txt  main.cpp
src/core/: event.h  id.h  record.h  stream_schema.h  watermark.h
src/core/types/: float.h  int.h  types.h  uint.h  window_spec.h
src/engine/: compiler.h  execution_engine.h  execution_graph.h  pipeline.h  slot.cpp  slot.h  slot_engine.cpp  slot_engine.h  slot_manager.cpp  slot_manager.h
src/functions/: sink_function.h  source_function.h
src/graph/: dataflow_graph.h  dataflow_graph_builder.h  operator_descriptor.h  stream_edge.h
src/operators/logical/: interval_join_logical_operator.h  sink_logical_operator.h  source_logical_operator.h  window_join_logical_operator.h  window_logical_operator.h
src/operators/physical/: channel_source_physical_operator.h  collect_sink_physical_operator.h  collection_source_physical_operator.h  count_window_physical_operator.h  filter_physical_operator.h  map_physical_operator.h  physical_operator.h  sink_physical_operator.h  source_physical_operator.h  time_window_physical_operator.h  window_physical_operator.h
src/runtime/: event_buffer.h  input_channel.h  stream_element.h
src/util/log/: logger.cpp  logger.h
tests/: CMakeLists.txt
tests/core/: event_test.cpp  id_test.cpp  record_test.cpp  stream_schema_test.cpp  watermark_test.cpp
tests/core/types/: float_test.cpp  int_test.cpp  uint_test.cpp
tests/engine/: compiler_test.cpp  execution_graph_print_test.cpp  pipeline_test.cpp  slot_engine_test.cpp  slot_manager_test.cpp  slot_test.cpp
tests/functions/: function_concepts_test.cpp
tests/graph/: dataflow_graph_test.cpp  graph_print_test.cpp
tests/operators/: join_fluent_api_test.cpp  logical_operator_test.cpp  physical_operator_test.cpp  source_watermark_test.cpp  time_window_test.cpp
tests/runtime/: event_buffer_test.cpp
tests/util/log/: logger_test.cpp
